--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💎 ProfitPal Dashboard</title>
+    <title>Dashboard</title>
     <style>
         * {
             margin: 0;
@@ -1204,11 +1204,6 @@
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer style="text-align: center; padding: 30px 20px; margin-top: 50px; border-top: 1px solid rgba(34, 139, 34, 0.2); color: #95a5a6; font-size: 14px;">
-        © 2025 ProfitPal. A product of Denava LLC. All rights reserved.
-    </footer>
-
         <script>
         'use strict';
 
@@ -1795,6 +1790,7 @@
         </script>
         
         <script src="/donation-fix.js"></script>
+        <script src="/brand.js"></script>
         <script src="/footer.js"></script>
 
 </body>
