--- a/dashboard.html
+++ b/dashboard.html
@@ -867,7 +867,7 @@
     <!-- Header -->
     <header class="header">
         <div class="header-content">
-            <div class="logo">💎 ProfitPal</div>
+            <!-- Логотип добавится автоматически через brand.js -->
 
             <nav class="nav-menu">
                 <a href="#" class="nav-item active">Dashboard</a>
